[gd_scene load_steps=20 format=3 uid="uid://c3vabx08gdd7r"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_at5rj"]
[ext_resource type="Texture2D" uid="uid://bm7c2qw7ttapg" path="res://cards/textures/pixelCardAssest_V01.png" id="2_gpqqq"]
[ext_resource type="FontFile" uid="uid://bsiyk0x3oce2j" path="res://ui/NotJamChunkySans.ttf" id="3_3fjkd"]
[ext_resource type="Texture2D" uid="uid://c5tffete4me2a" path="res://cards/textures/Skills.png" id="4_4168f"]
[ext_resource type="Texture2D" uid="uid://0eiv65jqmdbo" path="res://cards/textures/cardbacks4092021.png" id="6_xay4n"]
[ext_resource type="Texture2D" uid="uid://bln8u23m78xaf" path="res://projectiles/textures/star_09.png" id="7_c1ls8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cl6i5"]
atlas = ExtResource("2_gpqqq")
region = Rect2(14, 4, 100, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo0c3"]
atlas = ExtResource("4_4168f")
region = Rect2(161, 17, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp7y8"]
atlas = ExtResource("2_gpqqq")
region = Rect2(252, 223, 96, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0db8"]
atlas = ExtResource("2_gpqqq")
region = Rect2(226, 337, 100, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jtj0"]
atlas = ExtResource("6_xay4n")
region = Rect2(776, 5, 100, 128)

[sub_resource type="Curve" id="Curve_8h5ha"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gxydt"]
curve = SubResource("Curve_8h5ha")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jqlnu"]
emission_shape = 3
emission_box_extents = Vector3(50, 64, 1)
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 45.0
angular_velocity_min = -400.0
angular_velocity_max = 400.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.03
scale_max = 0.05
scale_curve = SubResource("CurveTexture_gxydt")
color = Color(0.909804, 0.941176, 1, 1)

[sub_resource type="Animation" id="Animation_7tood"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardFront:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardFront:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBack:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1kmfi"]
resource_name = "flip_to_back"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardFront:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardFront:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBack:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4gv32"]
resource_name = "flip_to_front"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardFront:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardFront:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBack:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_pcrie"]
resource_name = "shake"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0), Vector2(5, 1), Vector2(-3, 5), Vector2(4, -5), Vector2(1, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.261799, -0.0349066, 0.0872665, 0.0, -0.0872665, 0.174533, 0.0, -0.0872665, 0.0872665, 0.0, -0.0872665, -0.261799, 0.0, -0.0872665, 0.0872665, 0.0, -0.0872665, -0.139626, 0.0, -0.0872665, 0.314159, 0.0, 0.139626, 0.0872665, 0.0, -0.0872665, 0.0872665, 0.0, -0.0872665, 0.0872665, 0.0, -0.0872665, 0.0872665, 0.0872665, 0.0, -0.0872665, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2461w"]
_data = {
"RESET": SubResource("Animation_7tood"),
"flip_to_back": SubResource("Animation_1kmfi"),
"flip_to_front": SubResource("Animation_4gv32"),
"shake": SubResource("Animation_pcrie")
}

[node name="Card" type="Node2D"]
script = ExtResource("1_at5rj")
front_texture = ExtResource("2_gpqqq")
image_texture = ExtResource("4_4168f")

[node name="CardFront" type="Node2D" parent="."]

[node name="CardBackground" type="Sprite2D" parent="CardFront"]
texture = SubResource("AtlasTexture_cl6i5")

[node name="Image" type="Sprite2D" parent="CardFront"]
position = Vector2(0, -7)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_oo0c3")

[node name="TitleBorder" type="Sprite2D" parent="CardFront"]
position = Vector2(0, 35)
texture = SubResource("AtlasTexture_mp7y8")

[node name="Label" type="Label" parent="CardFront/TitleBorder"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -14.5
offset_right = -48.0
offset_bottom = -14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_3fjkd")
theme_override_font_sizes/font_size = 6
text = "card name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 1

[node name="CardRarityFrame" type="Sprite2D" parent="CardFront"]
texture = SubResource("AtlasTexture_u0db8")

[node name="CardBack" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="CardBack"]
texture = SubResource("AtlasTexture_8jtj0")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_jqlnu")
texture = ExtResource("7_c1ls8")
interpolate = false
fract_delta = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_2461w")
}
